Upstream. Draft - config .

--- a/_lib/linux/lts/.config
+++ b/_lib/linux/lts/.config
@@ -8075,7 +8075,7 @@ CONFIG_MMC_SDRICOH_CS=m
 CONFIG_MMC_CB710=m
 CONFIG_MMC_VIA_SDMMC=m
 CONFIG_MMC_VUB300=m
-CONFIG_MMC_USHC=m
+# CONFIG_MMC_USHC is not set
 # CONFIG_MMC_USDHI6ROL0 is not set
 CONFIG_MMC_REALTEK_PCI=m
 CONFIG_MMC_REALTEK_USB=m
