--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -176,11 +176,11 @@ jobs:
     - name: _check_vbox-lts
       shell: bash {0}
       run: |
-        set -Eeuo pipefail          # keep strict mode
-        trap 'echo "::error::checker crashed"; exit 1' ERR
+        set +e                     # disable automatic exit‑on‑error
         ./ubiquitous_bash.sh _check_vbox-lts || rc=$?
-        echo "exit_code=$rc" >>"$GITHUB_OUTPUT"
-        [ "$rc" -eq 0 ]
+        rc=$?                      # capture the script’s exit code
+        echo "exit_code=$rc" >> "$GITHUB_OUTPUT"  
+        exit $rc                   # explicitly exit with that code
       timeout-minutes: 300
       
       
