--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -177,7 +177,7 @@ jobs:
       shell: bash {0}
       run: |
         set +e                     # disable automatic exit‑on‑error
-        ./ubiquitous_bash.sh _check_vbox-lts || rc=$?
+        ./ubiquitous_bash.sh _check_vbox-lts
         rc=$?                      # capture the script’s exit code
         echo "exit_code=$rc" >> "$GITHUB_OUTPUT"  
         exit $rc                   # explicitly exit with that code
