--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -181,12 +181,10 @@ jobs:
       
       
     - name: _check_nv-lts-series535p
-      shell: bash
       run: |
         ./ubiquitous_bash.sh _check_nv-lts-series535p
       timeout-minutes: 300
     - name: _check_nv-lts-legacy470
-      shell: bash
       run: |
         ./ubiquitous_bash.sh _check_nv-lts-legacy470
       timeout-minutes: 300
@@ -326,14 +324,14 @@ jobs:
 
       
       
-      
-      
-      
-      
     - name: _check_nv-mainline-series535p
       shell: bash
       run: |
+        set +e                     # disable automatic exit‑on‑error
         ./ubiquitous_bash.sh _check_nv-mainline-series535p
+        rc=$?                      # capture the script’s exit code
+        echo "exit_code=$rc" >> "$GITHUB_OUTPUT"  
+        exit $rc                   # explicitly exit with that code
       timeout-minutes: 300
     - name: _check_nv-mainline-legacy470
       shell: bash
